--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -35,5 +35,5 @@
 
 {% if site.owner.cv %}<p style="text-indent:0;"><a href="{{ site.owner.cv }}"><img src="https://caihanlin.com/images/logo/icons8-cv-100.png" width="15.8" height="15.8"></i> My CV</a></p>{% endif %}
 
-<!-- Lastly modified by Hanlin CAI in 2024/08/25 -->
+<!-- Lastly modified by Sheen Song in 2024/08/25 -->
 <!-- Lastly modified by Hanlin CAI in 2023/10/15 -->
