--- a/_includes/author-bio.html
+++ b/_includes/author-bio.html
@@ -1,4 +1,4 @@
-<img src="{{ site.url }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo" width="150" height="150" style="margin-left: 0.5em;">
+<img src="{{ site.url }}{{ site.baseurl }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo" width="150" height="150" style="margin-left: 0.5em;">
 
 <!-- <h4>{{ site.owner.name }}</h4> -->
 
